--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,5 +1,5 @@
 <nav class="navbar navbar-expand-md navbar-dark fixed-top" style="background-color: #37C7FB">
-    <a class="navbar-brand" href="#">nfs</a>
+    <a class="navbar-brand" routerLink="/">nfs-shop</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault" aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
@@ -12,19 +12,20 @@
         <li class="nav-item">
           <a class="nav-link" routerLink="/shopping-cart">Panier</a>
         </li>
+        <li class="nav-item">
+          <a class="nav-link" routerLink="/login">Connexion</a>
+        </li>
        
         <li ngbDropdown class="nav-item dropdown">
-          <a ngbDropdownToggle class="nav-link dropdown-toggle" href="#" id="dropdown01" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Menu</a>
+          <a ngbDropdownToggle class="nav-link dropdown-toggle" id="dropdown01" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Username</a>
           <div ngbDropdownMenu class="dropdown-menu" aria-labelledby="dropdown01">
             <a class="dropdown-item" routerLink="/my-orders">Mes commandes</a>
             <a class="dropdown-item" routerLink="admin/orders">Gestion des commandes</a>
             <a class="dropdown-item" routerLink="admin/products">Gestion des produits</a>
+            <a class="dropdown-item">Déconexion</a>
           </div>
         </li>
       </ul>
-      <form class="form-inline my-2 my-lg-0">
-        <input class="form-control mr-sm-2" type="text" placeholder="Search" aria-label="Search">
-        <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-      </form>
+      
     </div>
   </nav>
