--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,3 +1,1 @@
-<button 
-(click)="login()"
-class="btn btn-primary btn-sm"></button>
+<p><button (click)="login()" class="btn btn-primary">Se connecter avec Google</button></p>
