--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -12,17 +12,17 @@
         <li class="nav-item">
           <a class="nav-link" routerLink="/shopping-cart">Panier</a>
         </li>
-        <li class="nav-item">
+        <li *ngIf="!user" class="nav-item">
           <a class="nav-link" routerLink="/login">Connexion</a>
         </li>
        
-        <li ngbDropdown class="nav-item dropdown">
-          <a ngbDropdownToggle class="nav-link dropdown-toggle" id="dropdown01" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Username</a>
+        <li *ngIf="user" ngbDropdown class="nav-item dropdown">
+          <a ngbDropdownToggle class="nav-link dropdown-toggle" id="dropdown01" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">{{ user.displayName }}</a>
           <div ngbDropdownMenu class="dropdown-menu" aria-labelledby="dropdown01">
             <a class="dropdown-item" routerLink="/my-orders">Mes commandes</a>
             <a class="dropdown-item" routerLink="admin/orders">Gestion des commandes</a>
             <a class="dropdown-item" routerLink="admin/products">Gestion des produits</a>
-            <a class="dropdown-item">Déconexion</a>
+            <a (click)="logout()" class="dropdown-item">Déconexion</a>
           </div>
         </li>
       </ul>
